umowa zlecenia pojedynczo

--- a/kadry/src/main/webapp/kalendarz/sub/kalendarz_firmy.xhtml
+++ b/kadry/src/main/webapp/kalendarz/sub/kalendarz_firmy.xhtml
@@ -151,8 +151,8 @@
                     <p:commandButton styleClass="buttonnorm2" actionListener="#{kalendarzwzorView.reset}" value="Resetuj"  update="akordeon:KalendarzwzorCreateForm:mc akordeon:KalendarzwzorListForm:datalist akordeon:KalendarzwzormiesiacSaRokForm:datalist" rendered="#{kalendarzwzorView.selected.id ne null}"/>
                     <p:commandButton styleClass="buttonnorm2" actionListener="#{kalendarzwzorView.create}" value="#{bundle.Save}"  update="akordeon:KalendarzwzorCreateForm:mc akordeon:KalendarzwzorListForm:datalist akordeon:KalendarzwzormiesiacSaRokForm:datalist" rendered="#{kalendarzwzorView.selected.id eq null}"/>
                     <p:commandButton styleClass="buttonnorm2" actionListener="#{kalendarzwzorView.nanieszmiany}" value="nanieś pracow."  update="akordeon:KalendarzwzorCreateForm:mc akordeon:KalendarzwzorListForm:datalist akordeon:KalendarzwzormiesiacSaRokForm:datalist" rendered="#{kalendarzwzorView.selected.id ne null}"/>
-                    <p:commandButton styleClass="buttonnorm2" actionListener="#{kalendarzwzorView.implementuj}" value="implementuj wszyscy"  
-                                     update="akordeon:KalendarzwzorCreateForm:mc akordeon:KalendarzwzorListForm:datalist akordeon:KalendarzwzormiesiacSaRokForm:datalist" rendered="#{kalendarzwzorView.selected.id ne null}"/>
+<!--                    <p:commandButton styleClass="buttonnorm2" actionListener="#{kalendarzwzorView.implementuj}" value="implementuj wszyscy"  
+                                     update="akordeon:KalendarzwzorCreateForm:mc akordeon:KalendarzwzorListForm:datalist akordeon:KalendarzwzormiesiacSaRokForm:datalist" rendered="#{kalendarzwzorView.selected.id ne null}"/>-->
                 </p:outputPanel>
            </h:form>
                 <p:outputPanel>
