--- a/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
@@ -232,7 +232,7 @@
                 </p:panelGrid>
                  <p:panelGrid columns="2">
                         <p:outputLabel value="inne warunki zatr." />
-                        <p:textEditor id="dodatkowe" value="#{umowaGrupowoView.selected.innewarunkizatrudnienia}"  styleClass="dataUmowy" secure="false" height="80" allowFormatting="false" toolbarVisible="false" style="width: 800px;">
+                        <p:textEditor id="dodatkowe" value="#{umowaView.selected.innewarunkizatrudnienia}"  styleClass="dataUmowy" secure="false" height="80" allowFormatting="false" toolbarVisible="false" style="width: 900px;">
                            
                         </p:textEditor>
                     </p:panelGrid>
