--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -173,7 +173,7 @@
                             </f:facet>
                             <h:outputText value="#{item11.opispelny}"  rendered="#{item11.tylkosuperplace eq false and item11.aktywne eq false}"/>
                             <h:outputText value="#{item11.opispelny}"  rendered="#{item11.aktywne eq true and item11.tylkosuperplace eq false}" style="color: #1AA11A"/>
-                            <h:outputText value="#{item11.opispelny}"  rendered="#{item11.tylkosuperplace eq true and item11.aktywne eq false}" style="color: darkorange"/>
+                            <h:outputText value="#{item11.opispelny}"  rendered="#{item11.tylkosuperplace eq true}" style="color: darkorange"/>
                         </p:column>
                         <p:column style="text-align: center;" width="50">
                             <f:facet name="header">
