rewolucja wyliczanie umowy o prace

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
@@ -12,6 +12,7 @@
               fitViewport="true">
         <p:ajax event="open" listener="#{pasekwynagrodzenView.init()}" update="DefinicjalistaplacCreateForm DefinicjalistaplacCreateForm1 KursDataLPForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm" global="false"/>
         <p:panelGrid columns="2">
+            <p:autoUpdate/>
             <h:outputText value="W przypadku braku osoby na zleceniu na liście proszę sprawdzić, czy wystawiono rachunek." style="color: #136e13;margin-top: 10px;"/>
             <h:outputText value="Adres email do wysyłki listy: #{wpisView.getFirma().getEmail()}" style="color: #136e13;margin-top: 10px;"/>
         </p:panelGrid>
@@ -23,10 +24,9 @@
 
             </style>
                 <h:panelGroup >
-                    
                     <p:panelGrid columns="6" rendered="#{pasekwynagrodzenView.listadefinicjalistaplac ne null}">
                        <h:form  styleClass="formadmin" id="DefinicjalistaplacCreateForm">
-                            <p:outputLabel value="rodzaj umowy" />
+                           <p:outputLabel value="rodzaj listy płac" />
                             <p:selectOneListbox id="rodzajumowy" value="#{pasekwynagrodzenView.rodzajlistyplac}" scrollHeight="120" style="width: 280px;margin-left: 10px;" required="true" 
                                                  requiredMessage="Wybierz rodzaj listy płac"
                                  converter="#{rodzjalistyplacConverter}">
