--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
@@ -234,7 +234,7 @@
                     </p:dataTable>
                     <p:panelGrid columns="10" style="width: 500px;align-content: center; margin-top: 10px;">
                         <h:outputText value="norma godzin"/>
-                        <h:outputText value="dni przeprac."/>
+                        <h:outputText value="godz. przeprac."/>
                         <h:outputText value="dni oddeleg."/>
                         <h:outputText value="urlop płatny"/>
                         <h:outputText value="urlop bezpłat."/>
