--- a/kadry/src/main/webapp/umowa/sub/dane_rodzajumowy.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_rodzajumowy.xhtml
@@ -9,7 +9,7 @@
 >
     <p:outputPanel style="height: 60px" id="panelumowadane0">
         <h:form styleClass="formumowa" id="UmowaWyborForm">
-            <p:panelGrid columns="2" style="padding: 10px;">
+            <p:panelGrid columns="4" style="padding: 10px;">
                 <p:outputLabel value="wybierz rodzaj umowy do przeglądania/edycji" for="rodzajumowy" />
                 <p:selectOneMenu id="rodzajumowy" value="#{umowaView.rodzajumowy}"  autoWidth="false" style="width: 300px;" filter="true" filterMatchMode="contains" required="true">
                     <f:selectItem itemLabel="wybierz" noSelectionOption="true"/>
@@ -18,6 +18,8 @@
                     <f:selectItem itemLabel="pełnienie funkcji" itemValue="3"/>
                     <p:ajax event="change" partialSubmit="true" listener="#{umowaView.wyborinnejumowy()}" global="false" update="@(form) akordeon:UmowaCreateForm"/>
                 </p:selectOneMenu>
+                <p:outputLabel value="kopiuj ostatnią umowę" for="kopiujumowe" />
+                <p:commandButton id="kopiujumowe" value="kopiuj" styleClass="buttonnorm" actionListener="#{umowaView.kopiujostatniaumowe()}" update="akordeon:UmowaCreateForm"/>
             </p:panelGrid>
         </h:form>
     </p:outputPanel>
