wysylka pi11 zbiorcza wysyłka

--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -272,7 +272,7 @@
                     <f:facet name="header">
                         <h:outputText value="pdf"/>
                     </f:facet>
-                    <p:commandButton icon="pi pi-file-pdf" actionListener="#{kartaWynagrodzenView.drukujPIT11(itempity11, pokaz)}">
+                    <p:commandButton icon="pi pi-file-pdf" actionListener="#{kartaWynagrodzenView.drukujPIT11(itempity11, true)}">
                     </p:commandButton>
                 </p:column>
                  <p:column width="30" style="text-align: center;">
